# paper-evidence-workbench

./: .env.example  .gitignore  README.md  api.py  main.py  pyproject.toml
.github/workflows/: ci.yml
rag_eval/: eval.py  eval_main.py  evaluator.py  generate_testset.py  prompts.py  test_dataset.py
src/: bulid_db.py  config.py  evidence.py  indexing.py  models.py  parser.py  rag_chain.py  retrieval.py  storage.py
src/parsers/: __init__.py  base.py  mineru.py  plain.py
tests/: test_ingestion.py
web/: app.js  index.html  styles.css
